# rpirc

./: Cargo.toml
src/: app.rs  main.rs
src/event/: mod.rs  terminal.rs
src/handlers/: mod.rs  tui.rs
src/ui/: mod.rs  startup.rs  util.rs
