[package]
name = "rpirc"
version = "0.1.0"
license = "GPL-v3.0"
authors = ["Alex Ambarchian <alexiamb@buffalo.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
irc = "0.15.0"
tui = { version = "0.14", default-features = false, features = ['crossterm'] }
crossterm = { version = "0.19", features = ["event-stream"] }
anyhow = "1.0.40"
tokio = { version = "1", features = ["full"] }
futures = "0.3.14"
